Bug 1395715.  When recovering letter frames, only do first-line fixup when we have a first-line parent.  r=emilio

It turns out, this is the only case in which we need to do the fixup at all.
And this way we don't have to guess based on first-line styles, which may not
match the frame tree (for example if we have a pending style change that we
haven't processed yet).