layout/base/nsCSSFrameConstructor.h
@@ -1997,8 +1997,7 @@ private:
                                     nsFrameItems&      aLetterFrames,
                                     bool*              aStopLooking);
 
-  void RecoverLetterFrames(nsContainerFrame* aBlockFrame,
-                           bool aMayHaveFirstLine);
+  void RecoverLetterFrames(nsContainerFrame* aBlockFrame);
 
   //
   void RemoveLetterFrames(nsIPresShell*     aPresShell,
